More work on the tracer
+ Added additional math functions
+ Added CSS file

- Objects dont retain type data when sent from parent thread to worker through JSON
- Tracer function is incomplete

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,8 +1,9 @@
 auxiliary.org-netbeans-modules-web-clientproject-api.js_2e_libs_2e_folder=js/libs
-config.folder=${file.reference.RayTracer-config}
+config.folder=
+file.reference.javascript-raytracer-public_html=public_html
 file.reference.RayTracer-config=config
 file.reference.RayTracer-public_html=public_html
 file.reference.RayTracer-test=test
 files.encoding=UTF-8
-site.root.folder=${file.reference.RayTracer-public_html}
-test.folder=${file.reference.RayTracer-test}
+site.root.folder=${file.reference.javascript-raytracer-public_html}
+test.folder=
