Beginning work on Ray Sphere intersection
+ Added beginnings of unit tests to start doing test driven development
+ Started working on Ray and Sphere intersection

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,11 @@
 auxiliary.org-netbeans-modules-web-clientproject-api.js_2e_libs_2e_folder=js/libs
-config.folder=
+config.folder=${file.reference.javascript-raytracer-config}
+file.reference.javascript-raytracer-config=config
 file.reference.javascript-raytracer-public_html=public_html
+file.reference.javascript-raytracer-test=test
 file.reference.RayTracer-config=config
 file.reference.RayTracer-public_html=public_html
 file.reference.RayTracer-test=test
 files.encoding=UTF-8
 site.root.folder=${file.reference.javascript-raytracer-public_html}
-test.folder=
+test.folder=${file.reference.javascript-raytracer-test}
